--- a/MoverioApp/app/src/main/AndroidManifest.xml
+++ b/MoverioApp/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
 
         </activity>
         <activity
-            android:name=".activities.LessonListActivity"
+            android:name=".activities.StepListActivity"
             android:label="@string/title_activity_lesson_list"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
