--- a/WearablePhone/app/src/main/AndroidManifest.xml
+++ b/WearablePhone/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,13 +39,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DeviceListActivity"
+            android:name=".activities.DeviceListActivity"
             android:label="@string/title_activity_device_list"
             android:theme="@android:style/Theme.Holo.Dialog" >
         </activity>
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:name=".activities.CourseListActivity"
+            android:label="@string/title_activity_course_list"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".activities.StepListActivity"
+            android:label="@string/title_activity_step_list"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
