--- a/WearablePhone/app/build.gradle
+++ b/WearablePhone/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.thalmic:myosdk:0.10.+@aar'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
+    compile files('libs/gson-2.5.jar')
+
 }
